--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 6</title>
-   <!-- <script src="js/strings.js"></script>
-    <script src="js/math.js"></script>-->
+   <script src="js/strings.js"></script><!-- -->
+    <script src="js/math.js"></script>
     <script src="js/dates.js"></script> <!---->
-    <!--<script src="js/deathbyjs.js"></script>-->
+    <script src="js/deathbyjs.js"></script> <!---->
 </head>
 
 <body>
